--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -79,9 +79,9 @@ A simple statistical model of the DNA barcode gap is outlined. Specifically, \\ 
 
 \section{Introduction}
 
-The routine use of DNA sequences to support broad microevolutionary and \\ macroevolutionary hypotheses concerning demographic processes like gene flow and \\ speciation in diverse and spatially-distributed taxonomic lineages such as birds, fishes, insects, and arachnids took flight in the late 1980s \citep{avise1987intraspecific}. However, the application of genomic data to applied fields like biodiversity forensics, conservation, and management for molecular identification unknown specimen samples came later (\textit{e.g.}, Forensically Informative Nucleotide Sequencing (FINS); \citet{bartlett1992fins}). Since its inception over 20 years ago, DNA barcoding \citep{hebert2003biological, hebert2003barcoding} has emerged as a robust method of specimen identification and species delimitation across myriad Eukaryotic groups which have been sequenced at short, standardized gene regions like the haploid cytochrome $c$ oxidase subunit I (5'-COI) mitochondrial locus for animals. However, the success of the single-locus approach, particularly for regulatory and forensic applications, depends crucially on two important factors: (1) the availability of high-quality specimen records found in public reference sequence databases such as the Barcode of Life Data Systems (BOLD; \\ http://www.barcodinglife.org) \citep{ratnasingham2007bold} and GenBank \\ (https://www.ncbi.nlm.nih.gov/genbank/), and (2) the establishment of a DNA barcode gap --- the notion that the maximum pairwise genetic distance observed within species is much smaller than the minimum degree of marker variation found among species \citep{meyer2005dna, meier2008use}. Early work has demonstrated that the presence of a DNA barcode gap hinges strongly on extant levels of species haplotype diversity gauged from comprehensive specimen sampling at wide geographic and ecological scales \citep{bergsten2012effect, candek2015dna}. Despite this, many taxa lack adequate separation in their pairwise intraspecific and interspecific genetic distances due to varying rates of evolution in both genes and taxa \citep{pentinsaari2016molecular}. This can compromise rapid matching of unknown samples to expertly-validated references, leading to cases of false positives (taxon oversplitting) and false negatives (excessive lumping of taxa) as a result of incomplete lineage sorting, hybridization/introgression, species synonymy, cryptic species diversity, and misidentifications \citep{hubert2015dna, phillips2022lack}.
+The routine use of DNA sequences to support broad microevolutionary and \\ macroevolutionary hypotheses concerning demographic processes like gene flow and \\ speciation in diverse and spatially-distributed taxonomic lineages such as birds, fishes, insects, and arachnids took flight in the late 1980s \citep{avise1987intraspecific}. Despite this, the application of genomic data to applied fields like biodiversity forensics, conservation, and management for the molecular identification of unknown specimen samples came later (\textit{e.g.}, Forensically Informative Nucleotide Sequencing (FINS); \citet{bartlett1992fins}). Since its \\ inception over 20 years ago, DNA barcoding \citep{hebert2003biological, hebert2003barcoding} has emerged as a robust method of specimen identification and species delimitation across myriad Eukaryotic groups which have been sequenced at short, standardized gene regions like the cytochrome $c$ oxidase subunit I (5'-COI) mitochondrial locus for animals. However, the success of the single-locus approach, particularly for regulatory and forensic applications, depends crucially on two important factors: (1) the availability of high-quality specimen records found in public reference sequence databases such as the Barcode of Life Data Systems (BOLD; \\ http://www.barcodinglife.org) \citep{ratnasingham2007bold} and GenBank \\ (https://www.ncbi.nlm.nih.gov/genbank/), and (2) the establishment of a DNA barcode gap --- the notion that the maximum pairwise genetic distance observed within species is much smaller than the minimum degree of marker variation found among species \citep{meyer2005dna, meier2008use}. Early work has demonstrated that the presence of a DNA barcode gap hinges strongly on extant levels of species haplotype diversity gauged from comprehensive specimen sampling at wide geographic and ecological scales \citep{bergsten2012effect, candek2015dna}. Despite this, many taxa lack adequate separation in their pairwise intraspecific and interspecific genetic distances due to varying rates of evolution in both genes and taxa \citep{pentinsaari2016molecular}. This can compromise rapid matching of unknown samples to expertly-validated references, leading to cases of false positives (taxon oversplitting) and false negatives (excessive lumping of taxa) as a result of incomplete lineage sorting, hybridization/introgression, species synonymy, cryptic species diversity, and misidentifications \citep{hubert2015dna, phillips2022lack}.
 
-Recent work has argued that DNA barcoding, in its current form, is lacking in statistical rigor, as most studies rely strongly on heuristic distance-based measures to infer taxonomic identity. Of these studies, few report measures of uncertainty, such as standard errors (SEs) and confidence intervals (CIs), around estimates of intraspecific and interspecific \\ variation, calling into question the existence of a true species' DNA barcode gap \citep{candek2015dna, phillips2022lack}. To support this notion, novel nonparametric locus- and species-specific metrics based on the multispecies coalescent \citep{rannala2003bayes, yang2010bayesian, yang2017bayesian} were recently outlined. The statistics have been shown to hold strong promise when applied to predatory \textit{Agabus} (Coleoptera: Dytiscidae) diving beetles \citep{phillips2024measure}. Despite their ease of sampling and well-established taxonomy, this group possesses few morphologically-distinct taxonomic characters that readily facilitate their assignment to the species level \citep{bergsten2012effect}. Further, the metrics indicate that sister species pairs from this taxon are often difficult to distinguish on the basis of their DNA barcode sequences \citep{phillips2024measure}. Using sequence data from three mitochondrial cytochrome markers (5'-COI, 3'-COI, and cytochrome $b$ (CYTB)) obtained from BOLD and GenBank, results highlight that DNA barcoding has been a one-sided argument. Results point to the need to balance both the sufficient collection of specimens, as well as the extensive sampling of species: DNA barcode libraries are biased toward the latter \citep{phillips2024measure}. The coalescent \citep{kingman1982coalescent, kingman1982genealogy} encompasses a backwards continuous-time stochastic Markov process of allelic sampling within natural, neutrally-evolving, species populations towards the most recent common ancestor (MRCA). The estimators from \citet{phillips2024measure} represent a clear improvement over simple, yet arbitrary, distance heuristics such as the 2\% rule \citep{hebert2003biological} and the 10$\times$ rule \citep{hebert2004identification}. The former asserts that DNA sequences differing by at least 2\% at sequenced genomic regions should be expected to originate from different biological species, whereas the latter suggests that sequences display 10 times more genetic variation among species than within taxa is evidence for a distinct evolutionary origin. In addition, the reliance on visualization approaches, such as frequency histograms, dotplots, and quadrant plots to expose DNA barcoding's limitations, have also been criticized \citep{collins2013seven, phillips2022lack}. Up until the work of \cite{phillips2024measure}, the majority of studies (\textit{e.g.}, \citet{young2021macer}) have treated the DNA barcode gap as a binary response. However, given poor sampling depth for most taxa, a Yes/No dichotomy is inherently flawed because it can falsely imply a DNA barcode gap is present for a taxon of interest when in fact no such separation in pairwise genetic distances exists. The proposed statistics quantify the extent of asymmetric directionality of proportional pairwise genetic distance distribution overlap/separation for species within well-sampled taxonomic genera based on a straightforward distance count, in a similar vien to established measures of statistical similarity such as $f$-divergence. The metrics can be employed in a variety of ways, including to validate performance of marker genes for species identification (as in \citet{phillips2024measure}), as well as to assess whether computed values are consistent with population genetic-level parameters like effective population size ($N_e$), mutation rates ($\mu$) and divergence times ($\tau$) for species under study \citep{mather2019practical}. 
+Recent work has argued that DNA barcoding, in its current form, is lacking in statistical rigor, as most studies rely strongly on heuristic distance-based measures to infer taxonomic identity. Of these studies, few report measures of uncertainty, such as standard errors (SEs) and confidence intervals (CIs), around estimates of intraspecific and interspecific \\ variation, calling into question the existence of a true species' DNA barcode gap \citep{candek2015dna, phillips2022lack}. To support this notion, novel nonparametric locus- and species-specific metrics based on the multispecies coalescent \citep{rannala2003bayes, yang2010bayesian, yang2017bayesian} were recently outlined. The statistics have been shown to hold strong promise when applied to predatory \textit{Agabus} (Coleoptera: Dytiscidae) diving beetles \citep{phillips2024measure}. Despite their ease of sampling and well-established taxonomy, this group possesses few morphologically-distinct taxonomic characters that readily facilitate their assignment to the species level \citep{bergsten2012effect}. Further, the metrics indicate that sister species pairs from this taxon are often difficult to distinguish on the basis of their DNA barcode sequences \citep{phillips2024measure}. Using sequence data from three mitochondrial cytochrome markers (5'-COI, 3'-COI, and cytochrome $b$ (CYTB)) obtained from BOLD and GenBank, results highlight that DNA barcoding has been a one-sided argument. Results point to the need to balance both the sufficient collection of specimens, as well as the extensive sampling of species: DNA barcode libraries are biased toward the latter \citep{phillips2024measure}. The coalescent \citep{kingman1982coalescent, kingman1982genealogy} encompasses a backwards continuous-time stochastic Markov process of allelic sampling within natural, neutrally-evolving, species populations towards the most recent common ancestor (MRCA). The estimators from \citet{phillips2024measure} represent a clear improvement over simple, yet arbitrary, distance heuristics such as the 2\% rule \citep{hebert2003biological} and the 10$\times$ rule \citep{hebert2004identification}. The former asserts that DNA sequences differing by at least 2\% at sequenced genomic regions should be expected to originate from different biological species, whereas the latter suggests that sequences display 10 times more genetic variation among species than within taxa is evidence for a distinct evolutionary origin. In addition, the reliance on visualization approaches, such as frequency histograms, dotplots, and quadrant plots to expose DNA barcoding's limitations, have also been criticized \citep{collins2013seven, phillips2022lack}. Up until the work of \cite{phillips2024measure}, the majority of studies (\textit{e.g.}, \citet{young2021macer}) have treated the DNA barcode gap as a binary response. However, given poor sampling depth for most taxa, a Yes/No dichotomy is inherently flawed because it can falsely imply a DNA barcode gap is present for a taxon of interest when in fact no such separation in pairwise genetic distances exists. The proposed statistics quantify the extent of asymmetric directionality of proportional pairwise genetic distance distribution overlap/separation for species within well-sampled taxonomic genera based on a straightforward distance count, in a similar vien to established measures of statistical similarity such as $f$-divergence. The metrics can be employed in a variety of ways, including to validate performance of marker genes for specimen identification to the species level (as in \citet{phillips2024measure}), as well as to assess whether computed values are consistent with population genetic-level parameters like effective population size ($N_e$), mutation rates ($\mu$) and divergence times ($\tau$) for species under study in a statistical phylogeographic setting \citep{knowles2002statistical, mather2019practical}. 
 
 While introduction of the metrics is a step in the right direction, what appears to be missing is a rigorous statistical treatment of the DNA barcode gap. This includes an unbiased way to compute the statistical accuracy of \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) estimators arising through problems inherent in frequentist maximum likelihood estimation for probability distributions having bounded positive support on the closed unit interval [0, 1]. To this end, here, a Bayesian model of the DNA barcode gap coalescent is introduced to rectify such issues. The model allows accurate estimation of posterior means, posterior standard deviations (SDs), posterior quantiles, and credible intervals (CrIs) for the metrics given datasets of intraspecific and interspecific pairwise genetic distances for species of interest.
 
@@ -145,9 +145,9 @@ Bayesian inference offers a natural path forward in this regard since it allows 
 
 Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate probabilities corresponding to extreme tail quantiles for positive highly skewed distributions on the unit interval  (or any closed subinterval thereof). Here, it is sought to numerically approximate the extent of proportional overlap/separation of intraspecific and interspecific pairwise genetic distance distributions within the subinterval [$a/a'$, $b$]. This is a challenging computational problem within the current study as detailed in subsequent sections. The usual approach employs kernel density estimation (KDE), along with numerical or Monte Carlo integration and invocationn of extreme value theory (EVT); however, this requires careful selection of the bandwidth parameter, among other considerations. This becomes problematic when fitting finite mixture models where nonidentifiability is rampant. For DNA barcode gap estimation, this would correspond to a two-component mixture (one for intraspecific distance comparisons, and the other for interspecific comparisons), with one or more curve intersection points between components, and the presence of zero distance inflation. This makes parameter estimation difficult using methods like the Expectation-Maximization (EM) algorithm \citep{dempster1977maximum}. Here, for simplicity, a different route is taken to avoid these obstacles. Counts, $y$, of overlapping pairwise genetic distances (as expressed in the numerator of Equations (1)-(4)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, C\}$ are total count vectors of intraspecific and combined pairwise genetic distances, respectively, for a target species along with its nearest neighbour species, and $k = M$ is a total count vector for all pairwise interspecific species comparisons. This follows from the fact that the ECDF is binomially distributed. The quantity $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. 
 
-The metrics encompassing $\theta$ are presumed to follow a Beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. The beta distribution has a prior mean of $\mu = \frac{\alpha}{\alpha + \beta}$ and a prior variance equal to $\sigma^2 = \frac{\alpha\beta}{(\alpha + \beta)^2(\alpha + \beta + 1)}$. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed, specifically, Beta($\alpha + Y$, $\beta + n - Y$), having expectation $\mathbb{E}[Y] = \frac{\alpha + Y}{\alpha + \beta + n}$ and variance $\mathbb{V}[Y] = \frac{(\alpha + Y)(\beta + n - Y)}{(\alpha + \beta + n)^2(\alpha + \beta + n + 1)}$. In the case where $\alpha = \beta$, all generated Beta($\alpha$, $\beta$) distributions will possess the same expectation, whereas variance will shrink as both $\alpha$ and $\beta$ increase.
+The metrics encompassing $\theta$ are presumed to follow a Beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. The beta distribution has a prior mean of $\mu = \frac{\alpha}{\alpha + \beta}$ and a prior variance equal to $\sigma^2 = \frac{\alpha\beta}{(\alpha + \beta)^2(\alpha + \beta + 1)}$. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed, specifically, Beta($\alpha + Y$, $\beta + n - Y$), having expectation $\mathbb{E}[Y] = \frac{\alpha + Y}{\alpha + \beta + n}$ and variance $\mathbb{V}[Y] = \frac{(\alpha + Y)(\beta + n - Y)}{(\alpha + \beta + n)^2(\alpha + \beta + n + 1)}$. In the context of DNA barcoding, it is important that the DNA barcode gap metrics effectively differentiate between extremes of no overlap/complete separation and complete overlap/no separation, corresponding to values of the metrics equal to 0 and 1 (equivalent to total distance counts of 0 and $n$), respectively. These extremes yield a posterior expectation of $\mathbb{E}[Y] = \frac{\alpha}{\alpha + \beta + n}$ and a posterior variance of $\mathbb{V}[Y] = \frac{\alpha(\beta + n)}{(\alpha + \beta + n)^2(\alpha + \beta + n + 1)}$ when $Y$ = 0 and $\mathbb{E}[Y] = \frac{\alpha + n}{\alpha + \beta + n}$ and $\mathbb{V}[Y] = \frac{(\alpha + n)\beta}{(\alpha + \beta + n)^2(\alpha + \beta + n + 1)}$ when $Y = n$. Notice that posterior variances are equivalent at these boundaries. In the case where $\alpha = \beta$, all generated Beta($\alpha$, $\beta$) distributions will possess the same expectation, whereas variance will shrink as both $\alpha$ and $\beta$ increase.
 
-Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. This distribution has an expected value of $\mu = \frac{1}{2}$ and a variance of $\sigma^2 = \frac{1}{12}$. Further, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments such as the expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$, and other quantities, can be easily calculated. In the context of DNA barcoding, it is important that the DNA barcode gap metrics effectively differentiate between extremes of no overlap/complete separation and complete overlap/no separation, corresponding to values of the metrics equal to 0 and 1 (equivalent to total distance counts of 0 and $n$), respectively. These extremes yield a posterior expectation of $\mathbb{E}[Y] = \frac{1}{n + 2}$ and a posterior variance of $\mathbb{V}[Y] = \frac{n \hspace{0.5mm} + \hspace{0.5mm} 1}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$ when $Y$ = 0 and $\mathbb{E}[Y] = \frac{n + 1}{n + 2}$ and $\mathbb{V}[Y] = \frac{n \hspace{0.5mm} + \hspace{0.5mm} 1}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$ when $Y = n$. Notice that that posterior variances are equivalent at these boundaries. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. In the case of unimodal distributions, the (estimated) posterior mean often possesses the property that it readily decomposes into a convex linear combination, in the form of a weighted sum, of the (estimated) prior mean and the MLE. That is $\hat{\mu}_\mathrm{posterior} = w\hat{\mu}_\mathrm{prior} + (1-w)\hat{\mu}_\mathrm{MLE}$, where for the beta distribution, $w = \frac{\alpha + \beta}{\alpha + \beta + n}$. Therefore, with sufficient data, $w \rightarrow 0$ as $n \rightarrow \infty$, and the choice of prior distribution becomes less important since the posterior will be dominated by the likelihood. The full Bayesian model for species $x$ is thus given by
+Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. This distribution has an expected value of $\mu = \frac{1}{2}$ and a variance of $\sigma^2 = \frac{1}{12}$. Further, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments such as the expected value $\mathbb{E}[Y] = \frac{Y + 1}{n + 2}$ and variance $\mathbb{V}[Y] = \frac{(Y + 1)(n - Y + 1)}{(n + 2)^2(n + 3)}$, and other quantities, can be easily calculated. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. In the case of unimodal distributions, the (estimated) posterior mean often possesses the property that it readily decomposes into a convex linear combination, in the form of a weighted sum, of the (estimated) prior mean and the MLE. That is $\hat{\mu}_\mathrm{posterior} = w\hat{\mu}_\mathrm{prior} + (1-w)\hat{\mu}_\mathrm{MLE}$, where for the beta distribution, $w = \frac{\alpha + \beta}{\alpha + \beta + n}$. Therefore, with sufficient data, $w \rightarrow 0$ as $n \rightarrow \infty$, and the choice of prior distribution becomes less important since the posterior will be dominated by the likelihood. The full Bayesian model for species $x$ is thus given by
 
 \begin{align}
 \notag y_\mathrm{lwr} &\sim \mathrm{Binomial}(N, p_\mathrm{lwr}) \\ 
@@ -171,7 +171,7 @@ Herein, the \textit{Agabus} CYTB dataset analyzed by \citet{phillips2024measure}
 
 MCMC parameter traceplots showed rapid mixing of chains to the stationary distribution (\textbf{Figure 2}). Further, all $\hat{R}$ and ESS values (not shown) were close to their recommended cutoffs of one and thousands of samples, respectively, indicating chains are both well mixed and have converged to the posterior distribution.  
 
-Bayesian posterior estimates were reported alongside frequentist MLEs, in addition to SEs, posterior SDs, 95\% CIs and 95\% CrIs (\textbf{Table 2}). CIs were calculated using the usual large sample  $(1-\alpha)100\%$-level interval estimate given by $\hat{p} \hspace{1mm} \pm z_{1 - \frac{\alpha}{2}}\sqrt{\frac{\hat{p}(1 - \hat{p})}{n}}$, where $z_{1 - \frac{\alpha}{2}}$ = 1.960 for 95\% confidence and $\alpha$ is the stated significance level (here, 5\%). Given a ($1 - \alpha$)100\% CI, with repeated sampling, on average ($1 - \alpha$)100\% of constructed intervals will contain the true parameter of interest; on the other hand, any given CI will either capture or exclude the true parameter with 100\% certainty. This in stark contrast to a CrI, where the true parameter is contained within said interval with ($1 - \alpha$)100\% probability. Note, by default Stan computes equal-tailed CrIs such that there is equal area situated in the left and right tails of the posterior distribution. For a 95\% CrI, this corresponds to the 2.5th and 97.5th percent quantiles. However, constructed intervals are usually only valid for symmetric or nearly symmetric distributions. Given the bounded nature of the DNA barcode gap metrics, whose posterior distributions, as expected, show considerable skewness, a different approach to reporting CrIs, such as Highest Posterior Density (HPD) intervals \citep{chen1999monte} or shortest probability intervals (SPIn) \citep{liu2015simulation} is warranted. As such asymmetric intervals generally attain greater statistical efficiency (in the form of smaller Mean Squared Error (MSE) or variance) and higher coverage probabilities than more standard interval estimates, careful in-depth comparison is left for future work. 
+Bayesian posterior estimates were reported alongside frequentist MLEs, in addition to SEs, posterior SDs, 95\% CIs and 95\% CrIs (\textbf{Table 2}). CIs were calculated using the usual large sample  $(1-\alpha)100\%$-level interval estimate given by $\hat{p} \hspace{1mm} \pm z_{1 - \frac{\alpha}{2}}\sqrt{\frac{\hat{p}(1 - \hat{p})}{n}}$, where $z_{1 - \frac{\alpha}{2}}$ = 1.960 for 95\% confidence and $\alpha$ is the stated significance level (here, 5\%). Given a ($1 - \alpha$)100\% CI, with repeated sampling, on average ($1 - \alpha$)100\% of constructed intervals will contain the true parameter of interest; on the other hand, any given CI will either capture or exclude the true parameter with 100\% certainty. This in stark contrast to a CrI, where the true parameter is contained within said interval with ($1 - \alpha$)100\% probability. Note, by default Stan computes equal-tailed (central) CrIs such that there is equal area situated in the left and right tails of the posterior distribution. For a 95\% CrI, this corresponds to the 2.5th and 97.5th percent quantiles. However, constructed intervals are usually only valid for symmetric or nearly symmetric distributions. Given the bounded nature of the DNA barcode gap metrics, whose posterior distributions, as expected, show considerable skewness, a different approach to reporting CrIs, such as Highest Posterior Density (HPD) intervals \citep{chen1999monte} or shortest probability intervals (SPIn) \citep{liu2015simulation} is warranted. As such asymmetric intervals generally attain greater statistical efficiency (in the form of smaller Mean Squared Error (MSE) or variance) and higher coverage probabilities than more standard interval estimates, careful in-depth comparison is left for future work. 
 
 Findings based on nonparametric MLEs and Bayesian posterior means were quite \\ comparable with one another and show evidence of complete overlap in pairwise intraspecific, interspecific, and combined genetic distances for \textit{A. bipustulatus} in both the $p$/$q$ and $p'$/$q'$ directions since the metrics attain magnitudes very close to one (\textbf{Table 2}). As a result, this likely indicates that no DNA barcode gap is present for this species. Such findings are strongly reinforced by the very tight clustering of posterior draws (\textbf{Figure 3}) and associated interval estimates owing to the large number of specimens sampled for this species. On the other hand, the situation for \textit{A. nevadensis} is more nuanced, as posterior values are further spread out (\textbf{Table 2} and \textbf{Figure 4}), suggesting less overall certainty in true parameter values given the low specimen sampling coverage for this taxon. Of note, the 95\% CIs and 95\% CrIs are quite wide for \textit{A. nevadensis}, consistent with much uncertainty regarding the computed frequentist and Bayesian posterior means of the DNA barcode gap metrics. For instance, the Bayesian analysis for \textit{A. nevadensis} suggests that the data are consistent with both $p_{\mathrm{lwr}}$ and $p^{'}_{\mathrm{lwr}}$ ranging from approximately 0.250-1.000. Further, regarding the frequentist analysis for the same species, the 95\% CI for $q^{'}_x$ extends to negative values at the left endpoint, due to the corresponding SE of 0.070 being too high as a result of the extremely low sample size of $n$ = 2 individuals sampled (\textbf{Table 2}). Since the 95\% CI truncated at the lower endpoint includes the value of zero, the null hypothesis for the presence of a DNA barcode gap cannot be rejected. Despite this, it is worth noting that truncation is not standard statistical practice and will likely lead to an interval with less than 95\% nominal coverage. In such cases, more appropriate confidence interval methods like the Wilson score interval, the exact (Clopper-Pearson) interval, or the Agresti-Coull interval should be employed \citep{newcombe1998confidence, agresti1998approximate}. KDEs for \textit{A. bipustulatus} are strongly left (negatively) skewed (\textbf{Figure 5}), whereas those for \textit{A. nevadensis} exhibit more symmetry, especially for $p_{\mathrm{upr}}$ and $p^{'}_{\mathrm{upr}}$ (\textbf{Figure 6}). These differences are likely due to the stark contrast in sample sizes for the two examined species. Nevertheless, simulated counts of overlapping specimen records from the posterior predictive distribution (\textbf{Table 3}) were found to be very close to observed counts for both species, indicating that the proposed model adequately captures underlying variation. Obtained results suggest that use of the Beta(1, 1) prior may not be appropriate given a low number of collected individuals for most taxa in DNA barcoding efforts. This suggests that further consideration of more informative beta priors is worthwhile. 
 
