--- a/References.bib
+++ b/References.bib
@@ -233,6 +233,16 @@ year = {1992}
   doi = {10.2307/3213548}
 }
 
+@article{knowles2002statistical,
+author = {Knowles, L. Lacey and Maddison, Wayne P.},
+title = {Statistical Phylogeography},
+journal = {Molecular Ecology},
+volume = {11},
+number = {12},
+pages = {2623-2635},
+doi = {https://doi.org/10.1046/j.1365-294X.2002.01410.x},
+year = {2002}
+}
 
 @article{liu2015simulation,
   author       = {Liu, Yuhong and Gelman, Andrew and Zheng, Tian},
@@ -398,6 +408,17 @@ year = {2021}
     isbn = {978-3-319-24277-4},
     url = {https://ggplot2.tidyverse.org},
   }
+  
+@article{yang2010bayesian,
+  author = {Yang, Z. and Rannala, B.},
+  title = {Bayesian species delimitation using multilocus sequence data},
+  journal = {Proceedings of the National Academy of Sciences},
+  year = {2010},
+  volume = {107},
+  issue = {20},
+  pages = {9264-9269},
+  doi = {10.1073/pnas.0913022107}
+}
 
 @article{yang2017bayesian,
   author = {Yang, Z and Rannala, B},
